@@ -6,6 +6,7 @@ Version 1.8.1
      and to ignore subsequent re-transmission or -infection
    - Added tests to make sure epidemics happend (when they should) on a per-model
      basis but under both dynamics
+   - Added more tests for generating functions
 
 Version 1.7.2 (2021-07-06)
 
